Fix T40080: forcefield_toggle_exec() doesn't always enable force field.

Kudos to Brent Baccala for investigating and suggesting a fix.